--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,3 +34,12 @@ section#telefone {
 
 }
 
+iframe#tela {
+  position: relative;
+  top: 80px;
+  left: 22px;
+  width: 269px;
+  height: 471px;
+
+}
+
